# fileshare

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: client.rs  config.rs  discovery.rs  main.rs  server.rs  shares.rs  tls.rs
src/tui/: app.rs  mod.rs  ui.rs
