[package]
name = "fileshare"
version = "1.0.7"
edition = "2021"
description = "A local network file sharing CLI tool"

[[bin]]
name = "fileshare"
path = "src/main.rs"

# ── Profiles ────────────────────────────────────────────────────────────────
[profile.dev]
# Faster incremental builds: less optimization, faster linking
opt-level = 0          # default — no change, just explicit
debug = true
incremental = true     # cache unchanged codegen units
split-debuginfo = "unpacked"  # faster debug builds on macOS/Linux

[profile.release]
opt-level = 3          # maximum optimization
lto = "thin"           # link-time optimization across crates (thin = fast+good)
codegen-units = 1      # single unit = better inlining, smaller binary
strip = "symbols"      # drop debug symbols → noticeably smaller .exe/.bin
panic = "abort"        # no unwinding machinery → smaller binary


[dependencies]
# Async runtime
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "time", "sync"] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
futures = { version = "0.3", default-features = false }
bytes = { version = "1", default-features = false }

# Web server / HTTP
axum = { version = "0.8", default-features = false, features = ["multipart", "tokio", "json"] }
axum-extra = { version = "0.12", default-features = false, features = ["typed-header"] }
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls"] }
tower-http = { version = "0.6", default-features = false, features = ["fs", "cors"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "json"] }
mime_guess = { version = "2", default-features = false }

# TLS / Certificates
rcgen = { version = "0.14", default-features = false, features = ["crypto", "aws_lc_rs", "pem"] }

# Serialization
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
toml = { version = "1.1", default-features = false, features = ["parse", "display", "serde"] }

# CLI
clap = { version = "4", default-features = false, features = ["derive", "std"] }

# Terminal UI
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.29", default-features = false, features = ["event-stream", "windows"] }
indicatif = { version = "0.18", default-features = false }

# Cryptography
sha2 = { version = "0.11", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# Identifiers & time
uuid = { version = "1", default-features = false, features = ["v4"] }
nanoid = { version = "0.5", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Filesystem
walkdir = { version = "2", default-features = false }
zip = { version = "8.5", default-features = false, features = ["deflate"] }
flate2 = { version = "1", default-features = false, features = ["zlib-ng"] }
rayon = { version = "1", default-features = false }
dirs = { version = "6", default-features = false }

# Networking / Discovery
mdns-sd = { version = "0.19", default-features = false }
hostname = { version = "0.4", default-features = false }
socket2 = { version = "0.6", default-features = false }

# Utilities
anyhow = { version = "1", default-features = false }
arboard = { version = "3", default-features = false }
qrcode = { version = "0.14", default-features = false }


[dev-dependencies]
tempfile = "3"
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "json"] }
